--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - name: Get Version
         shell: bash
         id: get-version
         run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
-      - run: cd system && zip -r ../fatex.zip *
-      - name: Create Release
+
+      - name: Install dependencies and run webpack
+          run: |
+            npm install --silent
+            npm run build:production
+
+      - name: Create installable system zip file
+        - run: cd dist && zip -r ../fatex.zip *
+
+      - name: Create release
         id: create_versioned_release
         uses: ncipollo/release-action@v1
         with:
