--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,7 @@ jobs:
         run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
 
       - name: Install dependencies and run webpack
-          run: |
-            npm install --silent
-            npm run build:production
+          run: npm install --silent && npm run build:production
 
       - name: Create installable system zip file
         - run: cd dist && zip -r ../fatex.zip *
