--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "author": "Patrick Bauer (Daddi#2333)",
     "license": "MIT",
     "devDependencies": {
+        "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.0.3",
+        "file-loader": "^6.0.0",
+        "node-sass": "^4.14.1",
+        "sass-loader": "^9.0.2",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12"
     }
