--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "devDependencies": {
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.0.3",
-        "file-loader": "^6.0.0",
+        "css-loader": "^4.2.0",
         "node-sass": "^4.14.1",
         "sass-loader": "^9.0.2",
+        "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12"
     }
