--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "copy-webpack-plugin": "^6.0.3",
         "css-loader": "^4.2.0",
         "node-sass": "^4.14.1",
+        "node-sass-glob-importer": "^5.3.2",
         "sass-loader": "^9.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
