--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.0.3",
         "css-loader": "^4.2.0",
+        "eslint": "^7.6.0",
+        "eslint-loader": "^4.0.2",
         "node-sass": "^4.14.1",
         "node-sass-glob-importer": "^5.3.2",
         "sass-loader": "^9.0.2",
