--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint-loader": "^4.0.2",
         "node-sass": "^4.14.1",
         "node-sass-glob-importer": "^5.3.2",
+        "prettier": "2.0.5",
         "sass-loader": "^9.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
