--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "copy-webpack-plugin": "^6.0.3",
         "css-loader": "^4.2.0",
         "eslint": "^7.6.0",
+        "eslint-config-prettier": "^6.11.0",
         "eslint-loader": "^4.0.2",
         "node-sass": "^4.14.1",
         "node-sass-glob-importer": "^5.3.2",
