--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
         "node-sass": "^4.14.1",
         "node-sass-glob-importer": "^5.3.2",
         "prettier": "2.0.5",
+        "raw-loader": "^4.0.1",
         "sass-loader": "^9.0.2",
         "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.0",
+        "webpack-import-glob-loader": "^1.6.3"
     }
 }
