--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "eslint": "^7.6.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-loader": "^4.0.2",
+        "glob": "^7.1.6",
         "node-sass": "^4.14.1",
         "node-sass-glob-importer": "^5.3.2",
         "null-loader": "^4.0.0",
         "prettier": "2.0.5",
         "raw-loader": "^4.0.1",
         "sass-loader": "^9.0.2",
+        "string-replace-loader": "^2.3.0",
         "style-loader": "^1.2.1",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
