--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "eslint-config-prettier": "^6.11.0",
         "eslint-loader": "^4.0.2",
         "glob": "^7.1.6",
+        "marked": "^1.1.1",
         "node-sass": "^4.14.1",
         "node-sass-glob-importer": "^5.3.2",
         "null-loader": "^4.0.0",
