--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "eslint": "^7.6.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-loader": "^4.0.2",
+        "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
         "glob": "^7.1.6",
         "marked": "^1.1.1",
         "node-sass": "^4.14.1",
@@ -32,6 +33,8 @@
         "sass-loader": "^9.0.2",
         "string-replace-loader": "^2.3.0",
         "style-loader": "^1.2.1",
+        "ts-loader": "^8.0.2",
+        "typescript": "^3.9.7",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
