--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "author": "Patrick Bauer (Daddi#2333)",
     "license": "MIT",
     "devDependencies": {
+        "@types/webpack-env": "^1.15.2",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^6.0.3",
         "css-loader": "^4.2.0",
