--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2018",                    /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
     "module": "ESNext",                    /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
     "lib": [],                             /* Specify library files to be included in the compilation. */
-    "types": ["foundry-pc-types"],
+    "types": ["foundry-pc-types", "webpack-env"],
     "allowJs": true,                       /* Allow javascript files to be compiled. */
     "sourceMap": true,                     /* Generates corresponding '.map' file. */
     "strict": true,                        /* Enable all strict type-checking options. */
