--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/webpack-env": "^1.16.0",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
+        "autoprefixer": "^10.2.4",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^8.1.1",
         "css-loader": "^5.2.2",
@@ -32,6 +33,7 @@
         "node-sass": "^5.0.0",
         "node-sass-glob-importer": "^5.3.2",
         "null-loader": "^4.0.1",
+        "postcss-loader": "^5.0.0",
         "prettier": "^2.2.1",
         "raw-loader": "^4.0.2",
         "sass-loader": "^11.0.1",
@@ -44,5 +46,13 @@
         "webpack-cli": "^4.6.0",
         "webpack-dev-server": "^3.11.2",
         "webpack-import-glob-loader": "^1.6.3"
-    }
+    },
+    "browserslist": [
+        "defaults",
+        "not ie < 11",
+        "last 2 versions",
+        "> 1%",
+        "iOS 7",
+        "last 3 iOS versions"
+    ]
 }
