--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: FateX CI
-on: [push]
+on: 
+  push:
+    tags:
+    - '*'
 
 jobs:
   build:
@@ -24,10 +27,6 @@ jobs:
         id: create_versioned_release
         uses: ncipollo/release-action@v1
         with:
-          allowUpdates: true
           name: ${{ steps.get-version.outputs.version }}
-          draft: false
-          prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: './system/system.json,./fatex.zip'
-          tag: ${{ steps.get-version.outputs.version }}
