--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "watch": "webpack --env.watch",
         "build": "webpack",
         "build:production": "webpack --env.mode=production",
-        "start": "webpack-dev-server --hot"
+        "start": "webpack serve --hot"
     },
     "repository": {
         "type": "git",
@@ -17,31 +17,31 @@
     "license": "MIT",
     "devDependencies": {
         "@types/marked": "^1.1.0",
-        "@types/webpack-env": "^1.15.2",
-        "@typescript-eslint/eslint-plugin": "^4.0.1",
-        "@typescript-eslint/parser": "^4.0.1",
+        "@types/webpack-env": "^1.15.3",
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
         "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.1.0",
-        "css-loader": "^4.2.2",
-        "eslint": "^7.8.1",
-        "eslint-config-prettier": "^6.11.0",
+        "copy-webpack-plugin": "^6.2.1",
+        "css-loader": "^5.0.0",
+        "eslint": "^7.11.0",
+        "eslint-config-prettier": "^6.14.0",
         "eslint-loader": "^4.0.2",
         "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
         "glob": "^7.1.6",
-        "marked": "^1.1.1",
+        "marked": "^1.2.2",
         "node-sass": "^4.14.1",
         "node-sass-glob-importer": "^5.3.2",
-        "null-loader": "^4.0.0",
-        "prettier": "^2.1.1",
-        "raw-loader": "^4.0.1",
-        "sass-loader": "^10.0.2",
-        "source-map-loader": "^1.1.0",
+        "null-loader": "^4.0.1",
+        "prettier": "^2.1.2",
+        "raw-loader": "^4.0.2",
+        "sass-loader": "^10.0.3",
+        "source-map-loader": "^1.1.1",
         "string-replace-loader": "^2.3.0",
-        "style-loader": "^1.2.1",
-        "ts-loader": "^8.0.3",
-        "typescript": "^4.0.2",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12",
+        "style-loader": "^2.0.0",
+        "ts-loader": "^8.0.6",
+        "typescript": "^4.0.3",
+        "webpack": "^5.1.3",
+        "webpack-cli": "^4.1.0",
         "webpack-dev-server": "^3.11.0",
         "webpack-import-glob-loader": "^1.6.3"
     }
