--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "description": "FateX is the extended Fate game system for FoundryVTT.",
     "private": true,
     "scripts": {
-        "watch": "webpack --env watch",
-        "build": "webpack",
-        "build:production": "webpack --mode production --env mode=production",
-        "start": "webpack serve --hot"
+        "build": "snowpack build"
     },
     "repository": {
         "type": "git",
@@ -17,32 +14,13 @@
     "license": "MIT",
     "devDependencies": {
         "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-5",
+        "@snowpack/plugin-sass": "^1.2.0",
         "@types/marked": "^2.0.1",
-        "@types/webpack-env": "^1.16.0",
         "@typescript-eslint/eslint-plugin": "^4.20.0",
         "@typescript-eslint/parser": "^4.20.0",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^8.1.0",
-        "css-loader": "^5.2.0",
-        "eslint": "^7.23.0",
-        "eslint-config-prettier": "^8.1.0",
-        "eslint-loader": "^4.0.2",
         "glob": "^7.1.6",
         "marked": "^2.0.1",
-        "node-sass": "^5.0.0",
-        "node-sass-glob-importer": "^5.3.2",
-        "null-loader": "^4.0.1",
         "prettier": "^2.2.1",
-        "raw-loader": "^4.0.2",
-        "sass-loader": "^11.0.1",
-        "source-map-loader": "^2.0.1",
-        "string-replace-loader": "^3.0.1",
-        "style-loader": "^2.0.0",
-        "ts-loader": "^8.1.0",
-        "typescript": "^4.2.3",
-        "webpack": "^5.30.0",
-        "webpack-cli": "^4.6.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-import-glob-loader": "^1.6.3"
+        "snowpack": "^3.1.0-pre.11"
     }
 }
