--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "target": "es2018",
         "module": "esnext",
         "lib": ["es2015", "es2019", "dom"],
-        "types": ["foundry-vtt-types", "webpack-env"],
+        "types": ["@league-of-foundry-developers/foundry-vtt-types", "webpack-env"],
+        "moduleResolution": "node",
         "sourceMap": true,
         "strict": true,
         "allowJs": true,
