--- a/package.json
+++ b/package.json
@@ -16,33 +16,33 @@
     "author": "Patrick Bauer (Daddi#2333)",
     "license": "MIT",
     "devDependencies": {
-        "@types/marked": "^1.2.0",
-        "@types/webpack-env": "^1.15.3",
-        "@typescript-eslint/eslint-plugin": "^4.8.1",
-        "@typescript-eslint/parser": "^4.8.1",
+        "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-5",
+        "@types/marked": "^2.0.0",
+        "@types/webpack-env": "^1.16.0",
+        "@typescript-eslint/eslint-plugin": "^4.19.0",
+        "@typescript-eslint/parser": "^4.19.0",
         "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^6.3.2",
-        "css-loader": "^5.0.1",
-        "eslint": "^7.14.0",
-        "eslint-config-prettier": "^6.15.0",
+        "copy-webpack-plugin": "^8.1.0",
+        "css-loader": "^5.1.3",
+        "eslint": "^7.22.0",
+        "eslint-config-prettier": "^8.1.0",
         "eslint-loader": "^4.0.2",
-        "foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types",
         "glob": "^7.1.6",
-        "marked": "^1.2.5",
+        "marked": "^2.0.1",
         "node-sass": "^5.0.0",
         "node-sass-glob-importer": "^5.3.2",
         "null-loader": "^4.0.1",
-        "prettier": "^2.2.0",
+        "prettier": "^2.2.1",
         "raw-loader": "^4.0.2",
-        "sass-loader": "^10.1.0",
-        "source-map-loader": "^1.1.2",
+        "sass-loader": "^11.0.1",
+        "source-map-loader": "^2.0.1",
         "string-replace-loader": "^3.0.1",
         "style-loader": "^2.0.0",
-        "ts-loader": "^8.0.11",
-        "typescript": "^4.1.2",
-        "webpack": "^5.6.0",
-        "webpack-cli": "^4.2.0",
-        "webpack-dev-server": "^3.11.0",
+        "ts-loader": "^8.0.18",
+        "typescript": "^4.2.3",
+        "webpack": "^5.27.2",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^3.11.2",
         "webpack-import-glob-loader": "^1.6.3"
     }
 }
