--- a/package.json
+++ b/package.json
@@ -17,18 +17,18 @@
     "license": "MIT",
     "devDependencies": {
         "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-5",
-        "@types/marked": "^2.0.1",
+        "@types/marked": "^2.0.2",
         "@types/webpack-env": "^1.16.0",
-        "@typescript-eslint/eslint-plugin": "^4.20.0",
-        "@typescript-eslint/parser": "^4.20.0",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
         "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^8.1.0",
-        "css-loader": "^5.2.0",
-        "eslint": "^7.23.0",
+        "copy-webpack-plugin": "^8.1.1",
+        "css-loader": "^5.2.1",
+        "eslint": "^7.24.0",
         "eslint-config-prettier": "^8.1.0",
-        "eslint-loader": "^4.0.2",
+        "eslint-webpack-plugin": "^2.5.3",
         "glob": "^7.1.6",
-        "marked": "^2.0.1",
+        "marked": "^2.0.3",
         "node-sass": "^5.0.0",
         "node-sass-glob-importer": "^5.3.2",
         "null-loader": "^4.0.1",
@@ -39,8 +39,8 @@
         "string-replace-loader": "^3.0.1",
         "style-loader": "^2.0.0",
         "ts-loader": "^8.1.0",
-        "typescript": "^4.2.3",
-        "webpack": "^5.30.0",
+        "typescript": "^4.2.4",
+        "webpack": "^5.32.0",
         "webpack-cli": "^4.6.0",
         "webpack-dev-server": "^3.11.2",
         "webpack-import-glob-loader": "^1.6.3"
