--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "typescript": "^4.2.4",
         "webpack": "^5.33.2",
         "webpack-cli": "^4.6.0",
-        "webpack-dev-server": "^3.11.2",
+        "webpack-dev-server": "v4.0.0-beta.2",
         "webpack-import-glob-loader": "^1.6.3"
     },
     "browserslist": [
