--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "sourceMap": true,
         "strict": true,
         "allowJs": true,
+        "allowSyntheticDefaultImports": true,
 
         //TODO: enable again
         "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
