--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "prettier": "^2.2.1",
         "raw-loader": "^4.0.2",
         "sass-loader": "^11.0.1",
+        "sortablejs": "^1.13.0",
         "source-map-loader": "^2.0.1",
         "string-replace-loader": "^3.0.1",
         "style-loader": "^2.0.0",
@@ -53,5 +54,8 @@
         "> 1%",
         "iOS 7",
         "last 3 iOS versions"
-    ]
+    ],
+    "dependencies": {
+        "@types/sortablejs": "^1.10.6"
+    }
 }
