--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "source-map-loader": "^3.0.0",
         "string-replace-loader": "^3.0.2",
         "style-loader": "^2.0.0",
+        "terser-webpack-plugin": "^5.1.3",
         "ts-loader": "^9.2.2",
         "typescript": "^4.3.2",
         "webpack": "^5.38.1",
