--- a/package.json
+++ b/package.json
@@ -15,37 +15,37 @@
     "author": "Patrick Bauer (Daddi#2333)",
     "license": "MIT",
     "devDependencies": {
-        "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-6",
-        "@types/marked": "^2.0.4",
-        "@types/webpack-env": "^1.16.2",
-        "@typescript-eslint/eslint-plugin": "^4.28.3",
-        "@typescript-eslint/parser": "^4.28.3",
-        "autoprefixer": "^10.3.1",
-        "clean-webpack-plugin": "^3.0.0",
-        "copy-webpack-plugin": "^9.0.1",
-        "css-loader": "^5.2.7",
-        "eslint": "^7.30.0",
+        "@league-of-foundry-developers/foundry-vtt-types": "^9.238.1",
+        "@types/marked": "^4.0.1",
+        "@types/webpack-env": "^1.16.3",
+        "@typescript-eslint/eslint-plugin": "^5.8.1",
+        "@typescript-eslint/parser": "^5.8.1",
+        "autoprefixer": "^10.4.1",
+        "clean-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^10.2.0",
+        "css-loader": "^6.5.1",
+        "eslint": "^8.6.0",
         "eslint-config-prettier": "^8.3.0",
-        "eslint-webpack-plugin": "^2.5.4",
-        "glob": "^7.1.7",
-        "marked": "^2.1.3",
-        "node-sass": "^6.0.1",
+        "eslint-webpack-plugin": "^3.1.1",
+        "glob": "^7.2.0",
+        "marked": "^4.0.8",
+        "node-sass": "^7.0.1",
         "node-sass-glob-importer": "^5.3.2",
         "null-loader": "^4.0.1",
-        "postcss-loader": "^6.1.1",
-        "prettier": "^2.3.2",
+        "postcss-loader": "^6.2.1",
+        "prettier": "^2.5.1",
         "raw-loader": "^4.0.2",
-        "sass-loader": "^12.1.0",
+        "sass-loader": "^12.4.0",
         "sortablejs": "^1.14.0",
-        "source-map-loader": "^3.0.0",
-        "string-replace-loader": "^3.0.3",
-        "style-loader": "^3.1.0",
-        "terser-webpack-plugin": "^5.1.4",
-        "ts-loader": "^9.2.3",
-        "typescript": "^4.3.5",
-        "webpack": "^5.44.0",
-        "webpack-cli": "^4.7.2",
-        "webpack-dev-server": "v4.0.0-beta.2",
+        "source-map-loader": "^3.0.1",
+        "string-replace-loader": "^3.1.0",
+        "style-loader": "^3.3.1",
+        "terser-webpack-plugin": "^5.3.0",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.4",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.7.2",
         "webpack-import-glob-loader": "^1.6.3"
     },
     "browserslist": [
