--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "FateX is the extended Fate game system for FoundryVTT.",
     "private": true,
     "scripts": {
-        "build": "webpack",
-        "build:production": "webpack --env mode=production",
-        "start": "webpack serve"
+        "start": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
     },
     "repository": {
         "type": "git",
@@ -43,6 +43,7 @@
         "terser-webpack-plugin": "^5.3.0",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.4",
+        "vite": "^2.8.6",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.7.2",
