--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
 
-        //TODO: enable again
-        "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
+        "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
         "strictNullChecks": true /* Enable strict null checks. */,
         "strictFunctionTypes": true /* Enable strict checking of function types. */,
         "strictBindCallApply": true /* Enable strict 'bind', 'call', and 'apply' methods on functions. */,
