--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "eslint-webpack-plugin": "^3.1.1",
         "glob": "^7.2.0",
         "marked": "^4.0.13",
-        "node-sass": "^7.0.1",
+        "sass": "^1.53.0",
         "node-sass-glob-importer": "^5.3.2",
         "null-loader": "^4.0.1",
         "postcss-loader": "^6.2.1",
